--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,29 @@
-
-
 /* font-family: 'Lexend', sans-serif; */
-
-*{
+* {
   margin: 0;
   padding: 0;
 }
 
+.BodyBackground {
+  background: #1A1A1A;
+  width: 100%;
+  height: 100vh;
+  padding-top: 50px;
+}
+
 .Header-Container {
   display: flex;
-  margin-top: 50px;
   justify-content: center;
   align-items: center;
   height: 100px;
+  z-index: 1000;
+}
+
+.BGObj-1 {
+  position: absolute;
+  top: -50px;
+  left: -50px;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
 }
