--- a/src/components/Home-Page.css
+++ b/src/components/Home-Page.css
@@ -1,89 +1,92 @@
 .BGObj-1 {
-  position: absolute;
-  top: -50px;
-  left: -200px;
-  z-index: 1;
-  width: 100%;
-  height: 100%;
-  pointer-events: none;
+    position: absolute;
+    top: -50px;
+    left: -200px;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
 }
 
 .home-page {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  padding-bottom: 80px; /* future footer space */
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    padding-bottom: 80px;
+    /* future footer space */
 }
 
 .hero-wrapper {
-  display: flex;
-  justify-content: center;
-  margin-top: auto;
+    display: flex;
+    justify-content: center;
+    margin-top: auto;
 }
 
 .hero-container {
-  width: 85%;
-  padding: 80px 60px;
-  background: #1C1C1C;
-  border: 1px solid #262626;
-  border-radius: 20px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  font-family: 'Lexend', sans-serif;
-  z-index: 10;
-  overflow: hidden;
-  position: relative;
+    width: 85%;
+    padding: 80px 60px;
+    background: #1C1C1C;
+    border: 1px solid #262626;
+    border-radius: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-family: 'Lexend', sans-serif;
+    z-index: 10;
+    overflow: hidden;
+    position: relative;
 }
 
 .hero-content {
-  max-width: 70%;
+    max-width: 70%;
+    z-index: 10;
 }
 
 .hero-heading {
-  color: white;
-  font-size: 48px;
-  font-weight: 600;
-  margin-bottom: 24px;
+    color: white;
+    font-size: 48px;
+    font-weight: 600;
+    margin-bottom: 24px;
 }
 
 .highlight {
-  color: #C6FF00;
+    color: #C6FF00;
 }
 
 .hero-subtext {
-  color: #B3B3B3;
-  font-size: 18px;
-  line-height: 1.6;
-  max-width: 700px;
+    color: #B3B3B3;
+    font-size: 18px;
+    line-height: 1.6;
+    max-width: 700px;
 }
 
 .hero-button {
-  background-color: #C6FF00;
-  color: black;
-  font-weight: 600;
-  padding: 16px 36px;
-  font-size: 18px;
-  border-radius: 999px;
-  border: none;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-  z-index: 1;
+    background-color: #C6FF00;
+    color: black;
+    font-weight: 600;
+    padding: 16px 36px;
+    font-size: 18px;
+    border-radius: 999px;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    z-index: 1;
 }
 
 .hero-button:hover {
-  background-color: #b3f000;
+    background-color: #b3f000;
 }
 
 .sec {
-  margin-top: 40px;
+    margin-top: 40px;
 }
 
 .section6-image {
-  width: 400px;
-  position: absolute;
-  z-index: 0;
-  top: -50px;
-  left: -50px;
+    pointer-events: none;
+    width: 400px;
+    position: absolute;
+    z-index: 0;
+    top: -50px;
+    left: -50px;
 }
