--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -53,7 +53,7 @@
     height: 100%;
     display: flex;
     justify-content: end;
-    align-items: center;   
+    align-items: center;
 }
 
 .sign-up {
@@ -88,19 +88,43 @@
 }
 
 .logo-text {
-  display: flex;
-  align-items: center;
-  gap: 12px;
-  color: white;
-  font-family: 'Lexend', sans-serif;
-  font-weight: 900;
-  font-size: 20px;
-  user-select: none;
-  width: 20%;
+    display: flex;
+    align-items: center;
+    gap: 12px;
+    color: white;
+    font-family: 'Lexend', sans-serif;
+    font-weight: 900;
+    font-size: 20px;
+    user-select: none;
+    width: 20%;
 }
 
 .logo {
-  height: 60px;
-  object-fit: contain;
-  border-radius: 50%;
+    height: 60px;
+    object-fit: contain;
+    border-radius: 50%;
+}
+
+.burger-menu-header {
+    display: none;
+}
+
+@media (max-width: 1024px) {
+    .nav {
+        display: none;
+    }
+
+    .actions {
+        display: none;
+    }
+
+    .burger-menu-header {
+        display: flex;
+    }
+}
+
+@media (max-width: 425px){
+    .site-name {
+        display: none;
+    }
 }
