--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -142,3 +142,108 @@
     color: #CAFF33;
 }
 
+@media (max-width: 1024px) {
+    .footer-bottom {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        gap: 1rem;
+        border-radius: 20px;
+    }
+
+    .footer-contact {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        gap: 1rem;
+    }
+
+    .footer-nav {
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 1rem;
+    }
+
+    .logo-text {
+        width: auto;
+    }
+}
+
+@media (max-width: 768px) {
+    .footer-top {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        margin-bottom: 0.1rem;
+    }
+
+    .footer-nav {
+        flex-direction: column;
+        align-items: center;
+        font-size: 1.25rem;
+    }
+
+     .footer-contact {
+        width: 100%;
+        padding-top: 6%;
+        padding-bottom: 6%;
+    }
+
+    .footer-bottom {
+        padding: 1rem;
+    }
+
+    .legal-links {
+        align-items: center;
+        gap: 0.25rem;
+    }
+
+    .rights {
+        font-size: 0.75rem;
+    }
+
+    .logo {
+        height: 50px;
+    }
+}
+
+@media (max-width: 480px) {
+    .footer {
+        padding: 1.5rem 1rem;
+    }
+
+    .footer-contact {
+        width: 100%;
+        padding-top: 10%;
+        padding-bottom: 10%;
+    }
+
+    .footer-bottom {
+        width: 100%;
+    }
+
+    .footer-nav {
+        font-size: 1.25rem;
+        gap: 0.5rem;
+    }
+
+    .legal-links {
+        font-size: 0.75rem;
+    }
+
+    .logo-text {
+        font-size: 18px;
+    }
+
+    .logo-circle {
+        padding: 10px;
+    }
+
+    .social-icons {
+        gap: 0.75rem;
+    }
+
+    .rights {
+        font-size: 0.7rem;
+    }
+}
