--- a/src/components/FAQ/FAQ.css
+++ b/src/components/FAQ/FAQ.css
@@ -13,7 +13,7 @@
   font-weight: 500;
   position: relative;
   align-self: stretch;
-    margin-bottom: 14px;
+  margin-bottom: 14px;
 }
 
 .faq-title .highlight {
@@ -21,11 +21,16 @@
 }
 
 .faq-subtitle {
-  color: #aaa;
-  font-size: 0.9rem;
+  color: #B3B3B3;
+  font-size: 18px;
+  line-height: 1.6;
+  font-family: "Lexend-Light", sans-serif;
+  font-weight: 300;
+  max-width: 700px;
+  margin-bottom: 32px;
+  text-align:left;
   margin-bottom: 3rem;
-  text-align: start;
-  
+
 }
 
 .faq-subtitle a {
@@ -36,8 +41,9 @@
   display: grid;
   grid-template-columns: 1fr;
   gap: 2rem;
-      mask-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0));
-  -webkit-mask-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0));
+  padding: 10px;
+  mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+  -webkit-mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
 }
 
 .faq-card-content {
@@ -60,6 +66,7 @@
   max-height: none;
   overflow: visible;
 }
+
 .faq-button {
   position: relative;
   z-index: 10;
@@ -76,6 +83,7 @@
   .faq-subtitle {
     text-align: center;
   }
+
   .faq-title {
     text-align: center;
   }
@@ -126,9 +134,9 @@
 }
 
 .faq-undrelined {
-    width: 100%;
-    height: 1px;
-    background-color: #262626;
-    margin: 1rem 0;
-    border-radius: 10px;
+  width: 100%;
+  height: 1px;
+  background-color: #262626;
+  margin: 1rem 0;
+  border-radius: 10px;
 }
