--- a/src/components/Home-Page/Section2.css
+++ b/src/components/Home-Page/Section2.css
@@ -1,6 +1,5 @@
 .section2-container {
     background-color: #1A1A1A;
-    padding: 80px 60px;
     width: 85%;
     color: white;
     font-family: 'Lexend', sans-serif;
@@ -31,6 +30,7 @@
     line-height: 1.6;
     max-width: 700px;
     margin-bottom: 32px;
+    text-align: start;
 }
 
 .section2-toggle {
@@ -160,9 +160,5 @@
 
     .section2-toggle {
         justify-content: center;
-    }
-
-    .section2-subtext {
-        text-align: center;
     }
 }
