--- a/src/components/Careers-Page/sec2career.css
+++ b/src/components/Careers-Page/sec2career.css
@@ -62,5 +62,17 @@ font-size: 18px;
 line-height: 150%;
 letter-spacing: 0%;
 max-width: 80%;
+}
 
+@media (max-width: 768px) {
+  .values-grid {
+    grid-template-columns: 1fr;
+  }
+  .values-heading{
+    text-align: center;
+  }
+    .values-subtext {
+        text-align: center;
+        max-width: 100%;
+    }
 }
